--- a/app/views/event_notifications/index.html.erb
+++ b/app/views/event_notifications/index.html.erb
@@ -10,6 +10,7 @@
         <th>Owner ID</th>
         <th>Created</th>
         <th>Send</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -20,6 +21,7 @@
         <td class="owner_id"><%= event_notification.owner.id %></td>
         <td class="created_at"><%= event_notification.created_at.to_date %></td>
         <td class="send_at"><%= event_notification.send_at.to_date if event_notification.send_at.present? %></td>
+        <td class="publish"><%= link_to "Publish", publish_event_notification_path(event_notification), method: :put %></td>
       </tr>
       <% end %>
     </tbody>
