--- a/app/views/event_notifications/index.html.erb
+++ b/app/views/event_notifications/index.html.erb
@@ -18,11 +18,11 @@
       <tr id="event-notification-<%= event_notification.id %>" class="event-notification">
         <td class="id"><%= event_notification.id %></td>
         <td class="action"><%= event_notification.action %></td>
-        <td class="owner_id"><%= event_notification.owner.id %></td>
+        <td class="owner_id"><%= event_notification.owner_id %></td>
         <td class="created_at"><%= event_notification.created_at.to_date %></td>
-        <td class="send_at">
-          <% if event_notification.send_at.present? %>
-            <%= event_notification.send_at.to_date %>
+        <td class="sent_at">
+          <% if event_notification.sent_at.present? %>
+            <%= event_notification.sent_at.to_date %>
           <% else %>
             <span class="icon icon-not-ok"></span>
           <% end %>
