--- a/app/views/event_notifications/index.html.erb
+++ b/app/views/event_notifications/index.html.erb
@@ -8,6 +8,7 @@
         <th>ID</th>
         <th>Action</th>
         <th>Owner ID</th>
+        <th>User</th>
         <th>Created</th>
         <th>Send</th>
         <th></th>
@@ -19,6 +20,13 @@
         <td class="id"><%= event_notification.id %></td>
         <td class="action"><%= event_notification.action %></td>
         <td class="owner_id"><%= event_notification.owner_id %></td>
+        <td class="user">
+          <% if event_notification.current_user.present? %>
+            <%= event_notification.current_user.id %>
+          <% else %>
+            <%= event_notification.current_user_id %>
+          <% end %>
+        </td>
         <td class="created_at"><%= event_notification.created_at.to_date %></td>
         <td class="sent_at">
           <% if event_notification.sent_at.present? %>
