--- a/app/views/event_notifications/index.html.erb
+++ b/app/views/event_notifications/index.html.erb
@@ -5,9 +5,10 @@
   <table class="list event-notifications">
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Action</th>
+        <th>#</th>
+        <th>Owner Type</th>
         <th>Owner ID</th>
+        <th>Action</th>
         <th>User</th>
         <th>Created</th>
         <th>Send</th>
@@ -18,8 +19,28 @@
       <% @event_notifications.each do |event_notification| %>
       <tr id="<%= dom_id event_notification %>" class="event_notifications">
         <td class="id"><%= event_notification.id %></td>
+        <td class="owner_type"><%= event_notification.owner_type %></td>
+        <td class="owner">
+          <% if event_notification.owner.present? %>
+            <% case event_notification.owner_type %>
+            <% when "Project" %>
+              <%= link_to event_notification.owner.name, project_path(event_notification.owner) %>
+            <% when "Issue" %>
+              <%= link_to event_notification.owner.subject, issue_path(event_notification.owner) %>
+            <% when "User" %>
+              <%= link_to event_notification.owner.login, user_path(event_notification.owner) %>
+            <% when "Group" %>
+              <%= link_to event_notification.owner.lastname, group_path(event_notification.owner) %>
+            <% when "Role" %>
+              <%= link_to event_notification.owner.name, edit_role_path(event_notification.owner) %>
+            <% when "TimeEntry" %>
+              <%= link_to event_notification.owner.issue.subject, issue_path(event_notification.owner.issue) %>
+            <% end %>
+          <% else %>
+            <%= event_notification.owner_id %>
+          <% end %>
+        </td>
         <td class="action"><%= event_notification.action %></td>
-        <td class="owner_id"><%= event_notification.owner_id %></td>
         <td class="user">
           <% if event_notification.current_user.present? %>
             <%= event_notification.current_user.id %>
@@ -27,10 +48,10 @@
             <%= event_notification.current_user_id %>
           <% end %>
         </td>
-        <td class="created_at"><%= event_notification.created_at.to_date %></td>
+        <td class="created_at"><%= format_time(event_notification.created_at) %></td>
         <td class="sent_at">
           <% if event_notification.sent_at.present? %>
-            <%= event_notification.sent_at.to_date %>
+            <%= format_time(event_notification.sent_at) %>
           <% else %>
             <span class="icon icon-not-ok"></span>
           <% end %>
