--- a/app/views/event_notifications/index.html.erb
+++ b/app/views/event_notifications/index.html.erb
@@ -1,68 +1,68 @@
 <%= title l(:event_notifications) %>
 
 <% if @event_notifications.any? %>
-<div class="autoscroll">
-  <table class="list event-notifications">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Owner Type</th>
-        <th>Owner ID</th>
-        <th>Action</th>
-        <th>User</th>
-        <th>Created</th>
-        <th>Send</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @event_notifications.each do |event_notification| %>
-      <tr id="<%= dom_id event_notification %>" class="event_notifications">
-        <td class="id"><%= event_notification.id %></td>
-        <td class="owner_type"><%= event_notification.owner_type %></td>
-        <td class="owner">
-          <% if event_notification.owner.present? %>
-            <% case event_notification.owner_type %>
-            <% when "Project" %>
-              <%= link_to event_notification.owner.name, project_path(event_notification.owner) %>
-            <% when "Issue" %>
-              <%= link_to event_notification.owner.subject, issue_path(event_notification.owner) %>
-            <% when "User" %>
-              <%= link_to event_notification.owner.login, user_path(event_notification.owner) %>
-            <% when "Group" %>
-              <%= link_to event_notification.owner.lastname, group_path(event_notification.owner) %>
-            <% when "Role" %>
-              <%= link_to event_notification.owner.name, edit_role_path(event_notification.owner) %>
-            <% when "TimeEntry" %>
-              <%= link_to event_notification.owner.project.name, project_time_entries_path(event_notification.owner.project) %>
+  <div class="autoscroll">
+    <table class="list event-notifications">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Subject Type</th>
+          <th>Subject</th>
+          <th>Action</th>
+          <th>User</th>
+          <th>Created</th>
+          <th>Published At</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @event_notifications.each do |event_notification| %>
+        <tr id="<%= dom_id event_notification %>" class="event_notifications">
+          <td class="id"><%= event_notification.id %></td>
+          <td class="subject_type"><%= event_notification.subject_type %></td>
+          <td class="subject">
+            <% if event_notification.subject.present? %>
+              <% case event_notification.subject_type %>
+              <% when "Project" %>
+                <%= link_to event_notification.subject.name, project_path(event_notification.subject) %>
+              <% when "Issue" %>
+                <%= link_to event_notification.subject.subject, issue_path(event_notification.subject) %>
+              <% when "User" %>
+                <%= link_to event_notification.subject.login, user_path(event_notification.subject) %>
+              <% when "Group" %>
+                <%= link_to event_notification.subject.lastname, group_path(event_notification.subject) %>
+              <% when "Role" %>
+                <%= link_to event_notification.subject.name, edit_role_path(event_notification.subject) %>
+              <% when "TimeEntry" %>
+                <%= link_to event_notification.subject.project.name, project_time_entries_path(event_notification.subject.project) %>
+              <% end %>
+            <% else %>
+              <%= event_notification.subject_id %>
             <% end %>
-          <% else %>
-            <%= event_notification.owner_id %>
-          <% end %>
-        </td>
-        <td class="action"><%= event_notification.action %></td>
-        <td class="user">
-          <% if event_notification.current_user.present? %>
-            <%= event_notification.current_user.id %>
-          <% else %>
-            <%= event_notification.current_user_id %>
-          <% end %>
-        </td>
-        <td class="created_at"><%= format_time(event_notification.created_at) %></td>
-        <td class="sent_at">
-          <% if event_notification.sent_at.present? %>
-            <%= format_time(event_notification.sent_at) %>
-          <% else %>
-            <span class="icon icon-not-ok"></span>
-          <% end %>
-        </td>
-        <td class="publish"><%= link_to l(:event_notification_publish), publish_event_notification_path(event_notification), method: :put, class: "icon icon-arrow-right" %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-<span class="pagination"><%= pagination_links_full @event_notification_pages, @event_notification_count %></span>
+          </td>
+          <td class="action"><%= event_notification.action %></td>
+          <td class="user">
+            <% if event_notification.current_user.present? %>
+              <%= event_notification.current_user.id %>
+            <% else %>
+              <%= event_notification.current_user_id %>
+            <% end %>
+          </td>
+          <td class="created_at"><%= format_time(event_notification.created_at) %></td>
+          <td class="published_at">
+            <% if event_notification.published_at.present? %>
+              <%= format_time(event_notification.published_at) %>
+            <% else %>
+              <span class="icon icon-not-ok" title="<%= event_notification.error %>"></span>
+            <% end %>
+          </td>
+          <td class="publish"><%= link_to l(:event_notification_publish), publish_event_notification_path(event_notification), method: :put, class: "icon icon-arrow-right" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <span class="pagination"><%= pagination_links_full @event_notification_pages, @event_notification_count %></span>
 <% else %>
-<p class="nodata"><%= l(:label_no_data) %></p>
+  <p class="nodata"><%= l(:label_no_data) %></p>
 <% end %>
