Remove dependent nullify on purpose
Event notifications are more like a log, so let's not remove any historical data

--- a/app/views/event_notifications/index.html.erb
+++ b/app/views/event_notifications/index.html.erb
@@ -38,6 +38,7 @@
               <% end %>
             <% else %>
               <%= event_notification.subject_id %>
+              (Object Deleted)
             <% end %>
           </td>
           <td class="action"><%= event_notification.action %></td>
