--- a/app/views/redis_notifications/show.html.erb
+++ b/app/views/redis_notifications/show.html.erb
@@ -20,6 +20,10 @@
               <% case @redis_notification.subject_type %>
               <% when "Project" %>
                 <%= link_to @redis_notification.subject.name, project_path(@redis_notification.subject) %>
+              <% when "Member" %>
+                <%= link_to @redis_notification.subject.project.name, settings_project_path(@redis_notification.subject.project, tab: "members") %>
+              <% when "MemberRole" %>
+                <%= link_to @redis_notification.subject.member.user.login, user_path(@redis_notification.subject.member.user) %>
               <% when "Issue" %>
                 <%= link_to @redis_notification.subject.subject, issue_path(@redis_notification.subject) %>
               <% when "User" %>
