--- a/app/views/redis_notifications/show.html.erb
+++ b/app/views/redis_notifications/show.html.erb
@@ -8,12 +8,12 @@
   <div class="attributes" style="margin-top: 0;">
     <div class="splitcontent">
       <div class="splitcontentleft">
-        <div class="subject_type attribute">
+        <div class="attribute">
           <div class="label">Subject Type:</div>
           <div class="value"><%= @redis_notification.subject_type %></div>
         </div>
 
-        <div class="assigned-to attribute">
+        <div class="attribute">
           <div class="label">Subject:</div>
           <div class="value">
             <% if @redis_notification.subject.present? %>
@@ -42,12 +42,13 @@
           </div>
         </div>
 
-        <div class="action attribute">
+        <div class="attribute">
           <div class="label">Action:</div>
           <div class="value"><%= @redis_notification.action %></div>
         </div>
-        <div class="user attribute">
-          <div class="label">User:</div>
+
+        <div class="attribute">
+          <div class="label">Current User:</div>
           <div class="value">
             <% if @redis_notification.current_user.present? %>
               <%= link_to @redis_notification.current_user.login, user_path(@redis_notification.current_user) %>
@@ -57,12 +58,82 @@
           </div>
         </div>
 
-        <div class="created_at attribute">
+        <% if @redis_notification.project_id.present? %>
+          <div class="attribute">
+            <div class="label">Project:</div>
+            <div class="value">
+              <% if @redis_notification.project.present? %>
+                <%= link_to @redis_notification.project.name, project_path(@redis_notification.project) %>
+              <% else %>
+                <%= @redis_notification.project_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.user_id.present? %>
+          <div class="attribute">
+            <div class="label">User:</div>
+            <div class="value">
+              <% if @redis_notification.user.present? %>
+                <%= link_to @redis_notification.user.login, user_path(@redis_notification.user) %>
+              <% else %>
+                <%= @redis_notification.user_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.member_id.present? %>
+          <div class="attribute">
+            <div class="label">Member:</div>
+            <div class="value">
+              <% if @redis_notification.member.present? %>
+                <%= link_to @redis_notification.member.project.name, settings_project_path(@redis_notification.member.project, tab: "members") %>
+              <% else %>
+                <%= @redis_notification.member_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.role_id.present? %>
+          <div class="attribute">
+            <div class="label">Role:</div>
+            <div class="value">
+              <% if @redis_notification.role.present? %>
+                <%= link_to @redis_notification.role.name, edit_role_path(@redis_notification.role) %>
+              <% else %>
+                <%= @redis_notification.role_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.issue_id.present? %>
+          <div class="attribute">
+            <div class="label">Issue:</div>
+            <div class="value">
+              <% if @redis_notification.issue.present? %>
+                <%= link_to @redis_notification.issue.subject, issue_path(@redis_notification.issue) %>
+              <% else %>
+                <%= @redis_notification.issue_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <div class="attribute">
           <div class="label">Created:</div>
           <div class="value"><%= format_time(@redis_notification.created_at) %></div>
         </div>
 
-        <div class="published_at attribute">
+        <div class="attribute">
           <div class="label">Published At:</div>
           <div class="value">
             <% if @redis_notification.published_at.present? %>
