Revert "Additional data with rails serialize coder"
This reverts commit dae9a59ffc2db0a93accf3ed28788dbcb27f770e.

--- a/app/views/redis_notifications/show.html.erb
+++ b/app/views/redis_notifications/show.html.erb
@@ -58,11 +58,72 @@
           </div>
         </div>
 
-        <% if @redis_notification.additional_data.present? %>
+        <% if @redis_notification.project_id.present? %>
           <div class="attribute">
-            <div class="label">Additional Data:</div>
+            <div class="label">Project:</div>
             <div class="value">
-              <code><%= @redis_notification.additional_data %></code>
+              <% if @redis_notification.project.present? %>
+                <%= link_to @redis_notification.project.name, project_path(@redis_notification.project) %>
+              <% else %>
+                <%= @redis_notification.project_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.user_id.present? %>
+          <div class="attribute">
+            <div class="label">User:</div>
+            <div class="value">
+              <% if @redis_notification.user.present? %>
+                <%= link_to @redis_notification.user.login, user_path(@redis_notification.user) %>
+              <% else %>
+                <%= @redis_notification.user_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.member_id.present? %>
+          <div class="attribute">
+            <div class="label">Member:</div>
+            <div class="value">
+              <% if @redis_notification.member.present? %>
+                <%= link_to @redis_notification.member.project.name, settings_project_path(@redis_notification.member.project, tab: "members") %>
+              <% else %>
+                <%= @redis_notification.member_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.role_id.present? %>
+          <div class="attribute">
+            <div class="label">Role:</div>
+            <div class="value">
+              <% if @redis_notification.role.present? %>
+                <%= link_to @redis_notification.role.name, edit_role_path(@redis_notification.role) %>
+              <% else %>
+                <%= @redis_notification.role_id %>
+                (Object Deleted)
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+
+        <% if @redis_notification.issue_id.present? %>
+          <div class="attribute">
+            <div class="label">Issue:</div>
+            <div class="value">
+              <% if @redis_notification.issue.present? %>
+                <%= link_to @redis_notification.issue.subject, issue_path(@redis_notification.issue) %>
+              <% else %>
+                <%= @redis_notification.issue_id %>
+                (Object Deleted)
+              <% end %>
             </div>
           </div>
         <% end %>
