--- a/app/views/redis_notifications/index.html.erb
+++ b/app/views/redis_notifications/index.html.erb
@@ -12,6 +12,7 @@
           <th>Current User</th>
           <th>Created</th>
           <th>Published At</th>
+          <th>Additional Data</th>
           <th></th>
         </tr>
       </thead>
@@ -60,6 +61,11 @@
               <%= format_time(redis_notification.published_at) %>
             <% else %>
               <span class="icon icon-not-ok" title="<%= redis_notification.error %>"></span>
+            <% end %>
+          </td>
+          <td class="additional-data">
+            <% if redis_notification.additional_data.present? %>
+              <code><%= Hash(redis_notification.additional_data).map{|k, v| "#{k}: #{v}"}.join(", ") %></code>
             <% end %>
           </td>
           <td class="publish"><%= link_to l(:redis_notification_publish), publish_redis_notification_path(redis_notification), method: :put, class: "icon icon-arrow-right" %></td>
