--- a/app/views/redis_notifications/index.html.erb
+++ b/app/views/redis_notifications/index.html.erb
@@ -29,7 +29,7 @@
               <% when "Member" %>
                 <%= link_to redis_notification.subject.project.name, settings_project_path(redis_notification.subject.project, tab: "members") %>
               <% when "MemberRole" %>
-                <%= link_to redis_notification.subject.member.user.login, user_path(redis_notification.subject.member.user) %>
+                <%= link_to redis_notification.subject.member.project.name, settings_project_path(redis_notification.subject.member.project, tab: "members") %>
               <% when "Issue" %>
                 <%= link_to redis_notification.subject.subject, issue_path(redis_notification.subject) %>
               <% when "User" %>
